[gd_scene load_steps=4 format=2]

[ext_resource path="res://globals/command_console/scripts/command-console.gd" type="Script" id=1]
[ext_resource path="res://globals/command_console/scripts/deactivated.gd" type="Script" id=2]
[ext_resource path="res://globals/command_console/scripts/activated.gd" type="Script" id=3]

[node name="CommandConsole" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]

[node name="Deactivated" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Activated" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="ConsolePanel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -1040.0
margin_bottom = -870.0
rect_min_size = Vector2( 0, 200 )
color = Color( 0.270588, 0.270588, 0.270588, 0.705882 )

[node name="VBoxContainer" type="VBoxContainer" parent="ConsolePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="CommandLog" type="RichTextLabel" parent="ConsolePanel/VBoxContainer"]
margin_right = 850.0
margin_bottom = 152.0
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="Prompt" type="LineEdit" parent="ConsolePanel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.705882 )
margin_top = 156.0
margin_right = 850.0
margin_bottom = 180.0
caret_blink = true

[connection signal="text_changed" from="ConsolePanel/VBoxContainer/Prompt" to="." method="_on_Prompt_text_changed"]
[connection signal="text_entered" from="ConsolePanel/VBoxContainer/Prompt" to="." method="_on_Prompt_text_entered"]
